samples/_failures_safe/1761301171_e036a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e9aeb7d.c: In function ‘main’:
./samples/SAFE/__tmp_1e9aeb7d.c:150:5: error: expected declaration or statement at end of input
  150 |     char input[1024];
      |     ^~~~
